--- a/index.html
+++ b/index.html
@@ -6,24 +6,20 @@
     <title>Prince collins WDD 130 | Personal Homepage</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-
     <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple." width="200">
-</body>
-<header>
-    <nav> 
-          <a href="#">Home<</a>
-          <a href="wwr/">Rafting Website</a>
-    </nav>
-</header>
-<main>
-    <h1>Prince Collins | WDD 130</h1>
-    <img src="images/profile.jpg" alt="Hello, my name is Prince Collins" width="200">
-    <p>Hello! My name is Prince Collins and i am from Nairobi,Kenya I enjoy learning new things and expanding my horizons.I am currently a student in the BYU program for software development undertaking Web fundamentals.hope I do well.</p>
-</main>
- <footer>
-    <p>© 2026 ⚫ Prince Collins ⚫ Nairobi,Kenya</p>
- </footer>
-<body>  
+    <header>
+        <nav> 
+              <a href="#">Home</a>
+              <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Prince Collins | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Prince Collins" width="200">
+        <p>Hello! My name is Prince Collins and I  am from Nairobi,Kenya I enjoy learning new things and expanding my horizons.I am currently a student in the BYU program for software development undertaking Web fundamentals and programming with functions.I look forward to meeting new people of a similar background and mindset.hope I do well.</p>
+    </main>
+     <footer>
+        <p>© 2026 ⚫ Prince Collins ⚫ Nairobi,Kenya</p>
+     </footer>
+</body>  
 </html>
