--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prince collins WDD 130 | Personal Homepage</title>
@@ -9,38 +9,38 @@
       content="WDD 130 personal homepage for Prince Collins from Nairobi, Kenya, sharing web development coursework, goals, and interests.">
     <meta name="author" content="Prince Collins">
     <link rel="stylesheet" href="styles/styles.css">
-    </head>
+</head>
 
-    <body>
-        <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple." width="200">
-        <header>
-            <nav>
-                <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
-            </nav>
-        </header>
-        <main>
-            <h1>Prince Collins | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Prince Collins" width="200">
-            <p>Hello! My name is Prince Collins and I am from Nairobi,Kenya I enjoy learning new
-                things
-                and expanding my horizons.I am currently a student in the BYU program for software
-                development undertaking Web fundamentals and programming with functions.I look
-                forward
-                to meeting new people of a similar background and mindset.hope I do well.</p>
-        </main>
+<body>
+    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple." width="200">
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Prince Collins | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Prince Collins" width="200">
+        <p>Hello! My name is Prince Collins and I am from Nairobi,Kenya I enjoy learning new
+            things
+            and expanding my horizons.I am currently a student in the BYU program for software
+            development undertaking Web fundamentals and programming with functions.I look
+            forward
+            to meeting new people of a similar background and mindset.hope I do well.</p>
+    </main>
 
-        <aside>
-            <h2>Nairobi, Kenya</h2>
-            <img src="images/nairobi-city.jpg" alt="A view of Nairobi, Kenya">
-            <p>Nairobi is the capital city of Kenya, known for its vibrant culture, modern skyline,
-                and proximity to Nairobi National Park, where wildlife roams just outside the city.
-            </p>
-        </aside>
+    <aside>
+        <h2>Nairobi, Kenya</h2>
+        <img src="images/nairobi-city.jpg" alt="A view of Nairobi, Kenya">
+        <p>Nairobi is the capital city of Kenya, known for its vibrant culture, modern skyline,
+            and proximity to Nairobi National Park, where wildlife roams just outside the city.
+        </p>
+    </aside>
 
-        <footer>
-            <p>© 2026 ⚫ Prince Collins ⚫ Nairobi,Kenya</p>
-        </footer>
-    </body>
+    <footer>
+        <p>© 2026 ⚫ Prince Collins ⚫ Nairobi,Kenya</p>
+    </footer>
+</body>
 
 </html>
