--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">LinkedIn</a>
+            <a href="https://facebook.com">Facebook</a>
+</nav>
+
         </nav>
     </header>
     <main>
@@ -31,12 +35,26 @@
             to meeting new people of a similar background and mindset.hope I do well.</p>
     </main>
 
+<ul>
+    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details?lang=eng" target="_blank">Salt Lake Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/congo-drc?lang=eng" target="_blank">Kinshasa Democratic Republic of the Congo Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/okinawa?lang=eng" target="_blank">Tokyo Japan Temple</a></li>
+    <ul class="box">
+</ul>
+
     <aside>
         <h2>Nairobi, Kenya</h2>
         <img src="images/nairobi-city.jpg" alt="A view of Nairobi, Kenya">
         <p>Nairobi is the capital city of Kenya, known for its vibrant culture, modern skyline,
             and proximity to Nairobi National Park, where wildlife roams just outside the city.
         </p>
+        <aside class="box">
+
+<aside style="position: relative;">
+    <img src="your-image.jpg" alt="Image Description">
+    <h2 style="position: absolute; top: 20px; left: 20px; color: white;">State/Country Heading</h2>
+</aside>
+
     </aside>
 
     <footer>
