--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prince collins WDD 130 | Personal Homepage</title>
-    <meta name="description"
-      content="WDD 130 personal homepage for Prince Collins from Nairobi, Kenya, sharing web development coursework, goals, and interests.">
+    <title>Prince Collins WDD 130 | Personal Homepage</title>
+    <meta name="description" content="WDD 130 personal homepage for Prince Collins from Nairobi, Kenya, sharing web development coursework, goals, and interests.">
     <meta name="author" content="Prince Collins">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -17,48 +15,35 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="https://linkedin.com">LinkedIn</a>
-            <a href="https://facebook.com">Facebook</a>
-</nav>
-
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
         </nav>
     </header>
     <main>
         <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple." width="200">
         <h1>Prince Collins | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Prince Collins" width="200">
-        <p>Hello! My name is Prince Collins and I am from Nairobi,Kenya I enjoy learning new
-            things
-            and expanding my horizons.I am currently a student in the BYU program for software
-            development undertaking Web fundamentals and programming with functions.I look
-            forward
-            to meeting new people of a similar background and mindset.hope I do well.</p>
+        <p>Hello! My name is Prince Collins and I am from Nairobi, Kenya. I enjoy learning new things and expanding my horizons. I am currently a student in the BYU program for software development undertaking Web fundamentals and programming with functions. I look forward to meeting new people of a similar background and mindset. Hope I do well.</p>
     </main>
 
-<ul>
-    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details?lang=eng" target="_blank">Salt Lake Temple</a></li>
-    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/congo-drc?lang=eng" target="_blank">Kinshasa Democratic Republic of the Congo Temple</a></li>
-    <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/okinawa?lang=eng" target="_blank">Tokyo Japan Temple</a></li>
-    <ul class="box">
-</ul>
+    <ul>
+        <li><a href="https://www.churchofjesuschrist.org/temples/temple-details?lang=eng" target="_blank" rel="noopener noreferrer">Salt Lake Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/congo-drc?lang=eng" target="_blank" rel="noopener noreferrer">Kinshasa Democratic Republic of the Congo Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/temple-details/temple/okinawa?lang=eng" target="_blank" rel="noopener noreferrer">Tokyo Japan Temple</a></li>
+    </ul>
 
     <aside>
         <h2>Nairobi, Kenya</h2>
         <img src="images/nairobi-city.jpg" alt="A view of Nairobi, Kenya">
-        <p>Nairobi is the capital city of Kenya, known for its vibrant culture, modern skyline,
-            and proximity to Nairobi National Park, where wildlife roams just outside the city.
-        </p>
-        <aside class="box">
-
-<aside style="position: relative;">
-    <img src="your-image.jpg" alt="Image Description">
-    <h2 style="position: absolute; top: 20px; left: 20px; color: white;">State/Country Heading</h2>
-</aside>
-
+        <p>Nairobi is the capital city of Kenya, known for its vibrant culture, modern skyline, and proximity to Nairobi National Park, where wildlife roams just outside the city.</p>
     </aside>
 
+    <div style="position: relative;">
+        <h2 style="position: absolute; top: 20px; left: 20px; color: white;">State/Country Heading</h2>
+    </div>
+
     <footer>
-        <p>© 2026 ⚫ Prince Collins ⚫ Nairobi,Kenya</p>
+        <p>© 2026 ⚫ Prince Collins ⚫ Nairobi, Kenya</p>
     </footer>
 </body>
 
