--- a/WWR/about.html
+++ b/WWR/about.html
@@ -30,12 +30,34 @@
                 <p>"We are a passionate rafting company dedicated to providing unforgettable river adventures for all skill levels. Safety, fun, and connection with nature are at the heart of everything we do. Whether you’re seeking an adrenaline-filled ride through rapids or a scenic float along calm waters, our experienced guides ensure an exciting and memorable experience for every guest.".</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>"Founded in 2023, our rafting company was born from a passion for adventure and the thrill of the river. In a short time, we’ve built a reputation for safety, expert guides, and unforgettable experiences for all who join us on the water." </p>
         </section>
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/imagesheroimage.jpg.jpg" alt="Los Dientes del Diablo Rapids">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/happyclient.jpg.webp" alt="Big Mallard Rapids">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/imagesheroimage.jpg.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/happyclient.jpg.webp" alt="Full Day Thrill">
+                    <figcaption>Full Day Thrill</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/imagesheroimage.jpg.jpg" alt="Rapids Challenge">
+                    <figcaption>Rapids Challenge</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
