--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Us page for the Rafting Company. Learn about our mission and history.">
+    <meta name="description"
+      content="About Us page for the Rafting Company. Learn about our mission and history.">
     <meta name="author" content="Your Full Name">
     <title>About Us - Rafting Travel</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
+
 <body>
     <header>
         <img src="images/imageslogo.png.jpg" alt="Rafting Company Logo">
@@ -27,12 +30,18 @@
             <h1>About Us - Rafting Travel</h1>
             <article>
                 <img src="images/happyclient.jpg.webp" alt="Happy Client">
-                <p>"We are a passionate rafting company dedicated to providing unforgettable river adventures for all skill levels. Safety, fun, and connection with nature are at the heart of everything we do. Whether you’re seeking an adrenaline-filled ride through rapids or a scenic float along calm waters, our experienced guides ensure an exciting and memorable experience for every guest.".</p>
+                <p>"We are a passionate rafting company dedicated to providing unforgettable river
+                    adventures for all skill levels. Safety, fun, and connection with nature are at
+                    the heart of everything we do. Whether you’re seeking an adrenaline-filled ride
+                    through rapids or a scenic float along calm waters, our experienced guides
+                    ensure an exciting and memorable experience for every guest.".</p>
             </article>
         </div>
         <section class="history">
             <h2>History</h2>
-            <p>"Founded in 2023, our rafting company was born from a passion for adventure and the thrill of the river. In a short time, we’ve built a reputation for safety, expert guides, and unforgettable experiences for all who join us on the water." </p>
+            <p>"Founded in 2023, our rafting company was born from a passion for adventure and the
+                thrill of the river. In a short time, we’ve built a reputation for safety, expert
+                guides, and unforgettable experiences for all who join us on the water." </p>
         </section>
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
@@ -75,4 +84,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
