--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -97,27 +97,29 @@
         </div>
 
         <section class="employees">
-            <h2>We Are Here to Serve You</h2>
+            <h2>Meet Our Team</h2>
+            <p class="team-intro">Our experienced team is dedicated to making your rafting adventure
+                unforgettable</p>
             <div class="employee-grid">
                 <figure>
-                    <img src="images/Sarah Johnson.jpg" alt="Sarah Johnson">
+                    <img src="images/sarah-johnson.jpg" alt="Sarah Johnson - Operations Manager">
                     <figcaption>
                         <strong>Sarah Johnson</strong><br>
-                        Operations Manager
+                        <span class="title">Operations Manager</span>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Emily Chen.jpg" alt="Mike Rodriguez">
+                    <img src="images/mike-rodriguez.jpg" alt="Mike Rodriguez - Lead River Guide">
                     <figcaption>
                         <strong>Mike Rodriguez</strong><br>
-                        Lead River Guide
+                        <span class="title">Lead River Guide</span>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/Mike Rodriguez.jpg" alt="Emily chen">
+                    <img src="images/emily-chen.jpg" alt="Emily Chen - Customer Service Director">
                     <figcaption>
                         <strong>Emily Chen</strong><br>
-                        Customer Service Director
+                        <span class="title">Customer Service Director</span>
                     </figcaption>
                 </figure>
             </div>
