--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -63,16 +63,19 @@
                         <div class="form-group">
                             <label>Message Purpose:</label>
                             <div class="radio-group">
-                                <label>
-                                    <input type="radio" name="purpose" value="general" required>
+                                <label for="general">
+                                    <input type="radio" id="general" name="purpose" value="general"
+                                      required>
                                     General Inquiry
                                 </label>
-                                <label>
-                                    <input type="radio" name="purpose" value="reservation" required>
+                                <label for="reservation">
+                                    <input type="radio" id="reservation" name="purpose"
+                                      value="reservation" required>
                                     Reservation Question
                                 </label>
-                                <label>
-                                    <input type="radio" name="purpose" value="suggestion" required>
+                                <label for="suggestion">
+                                    <input type="radio" id="suggestion" name="purpose"
+                                      value="suggestion" required>
                                     Website Suggestion
                                 </label>
                             </div>
@@ -84,8 +87,8 @@
                         </div>
 
                         <div class="form-group checkbox-group">
-                            <label>
-                                <input type="checkbox" name="newsletter">
+                            <label for="newsletter">
+                                <input type="checkbox" id="newsletter" name="newsletter">
                                 Please subscribe me to the monthly newsletter
                             </label>
                         </div>
